conferma primi cambiamenti PdQ

--- a/Esterni/Piano_di_qualifica/Piano_di_qualifica_3_0_0.tex
+++ b/Esterni/Piano_di_qualifica/Piano_di_qualifica_3_0_0.tex
@@ -391,30 +391,16 @@ All'utente è richiesto di:
 \begin{itemize}
 	\item trovarsi nella schermata di gestione del diagramma delle classi del progetto;
 	\item selezionare la classe;
-	\item selezionare la visibilità della classe.
-\end{itemize} & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TVFO3.1.2}{TVFO3.1.2} & L'utente intende inserire il nome di una classe.
-All'utente è richiesto di:
-\begin{itemize}
-	\item trovarsi nella schermata di gestione del diagramma delle classi del progetto;
-	\item selezionare la classe;
 	\item inserire il nome della classe.
 \end{itemize} & \textit{Non Implementato}\\ \hline
-\hypertarget{TVFO3.1.3}{TVFO3.1.3} & L'utente intende scegliere lo stereotipo di una classe.
-All'utente è richiesto di:
-\begin{itemize}
-	\item trovarsi nella schermata di gestione del diagramma delle classi del progetto;
-	\item selezionare la classe;
-	\item scegliere lo stereotipo della classe.
-\end{itemize} & \textit{Non Implementato}\\ \hline
-\hypertarget{TVFO3.1.4}{TVFO3.1.4} & L'utente intende inserire un attributo di una classe.
+\hypertarget{TVFO3.1.2}{TVFO3.1.2} & L'utente intende inserire un attributo di una classe.
 All'utente è richiesto di:
 \begin{itemize}
 	\item trovarsi nella schermata di gestione del diagramma delle classi del progetto;
 	\item selezionare la classe;
 	\item selezionare l'opzione di aggiunta di un attributo.
 \end{itemize} & \textit{Non Implementato}\\ \hline
-\hypertarget{TVFO3.1.4.1}{TVFO3.1.4.1} & L'utente intende inserire la visibilità di un attributo.
+\hypertarget{TVFO3.1.2.1}{TVFO3.1.2.1} & L'utente intende inserire la visibilità di un attributo.
 All'utente è richiesto di:
 \begin{itemize}
 	\item trovarsi nella schermata di gestione del diagramma delle classi del progetto;
@@ -422,12 +408,12 @@ All'utente è richiesto di:
 	\item selezionare l'attributo;
 	\item scegliere la visibilità dell'attributo.
 \end{itemize} & \textit{Non Implementato}\\ \hline
-\hypertarget{TVFO3.1.4.2}{TVFO3.1.4.2} & L'utente intende inserire il nome di un attributo.
+\hypertarget{TVFO3.1.2.2}{TVFO3.1.2.2} & L'utente intende inserire il nome di un attributo.
 All'utente è richiesto di:
 \begin{itemize}
 	\item trovarsi nella schermata di gestione del diagramma delle classi del progetto;
 	\item selezionare la classe;
-	\item selezionare l'attributo; 
+	\item spostarsi sull'apposita area di modifica dati; 
 	\item inserire il nome dell'attributo.
 \end{itemize} & \textit{Non Implementato}\\ \hline
 \hypertarget{TVFO3.1.4.3}{TVFO3.1.4.3} & L'utente intende inserire il tipo di un attributo.
@@ -435,39 +421,23 @@ All'utente è richiesto di:
 \begin{itemize}
 	\item trovarsi nella schermata di gestione del diagramma delle classi del progetto;
 	\item selezionare la classe;
-	\item selezionare l'attributo;
+	\item spostarsi sull'apposita area di modifica dati;
 	\item inserire il tipo dell'attributo.
-\end{itemize} & \textit{Non Implementato}\\ \hline
-\hypertarget{TVFO3.1.4.4}{TVFO3.1.4.4} & L'utente intende inserire la molteplicità di un attributo.
-All'utente è richiesto di:
-\begin{itemize}
-	\item trovarsi nella schermata di gestione del diagramma delle classi del progetto;
-	\item selezionare la classe;
-	\item selezionare l'attributo; 
-	\item inserire ila molteplicità dell'attributo.
 \end{itemize} & \textit{Non Implementato}\\ \hline
 \hypertarget{TVFO3.1.4.5}{TVFO3.1.4.5} & L'utente intende inserire il valore di default  di un attributo.
 All'utente è richiesto di:
 \begin{itemize}
 	\item trovarsi nella schermata di gestione del diagramma delle classi del progetto;
 	\item selezionare la classe;
-	\item selezionare l'attributo;
+	\item spostarsi sull'apposita area di modifica dati;
 	\item inserire il valore di default  dell'attributo.
-\end{itemize} & \textit{Non Implementato}\\ \hline
-\hypertarget{TVFO3.1.4.6}{TVFO3.1.4.6} & L'utente intende confermare l'inserimento di un attributo. All'utente è richiesto di: 
-\begin{itemize} 
-	\item trovarsi nella schermata di gestione del diagramma delle classi del progetto;
-	\item selezionare la classe;
-	\item inserire un nuovo attributo;
-	\item completare i campi dell'attributo;
-	\item premere sull'opzione di conferma dell'inserimento.
 \end{itemize} & \textit{Non Implementato}\\ \hline
 \hypertarget{TVFO3.1.5}{TVFO3.1.5} & L'utente intende rimuovere un attributo.
 All'utente è richiesto di:
 \begin{itemize}
 	\item trovarsi nella schermata di gestione del diagramma delle classi del progetto;
 	\item selezionare la classe;
-	\item selezionare l'attributo;
+	\item spostarsi sull'apposita area di modifica dati;
 	\item scegliere l'opzione di rimozione dell'attributo.
 \end{itemize} & \textit{Non Implementato}\\ \hline
 \hypertarget{TVFO3.1.6}{TVFO3.1.6} & L'utente intende inserire un metodo di una classe.
@@ -482,7 +452,7 @@ All'utente è richiesto di:
 \begin{itemize}
 	\item trovarsi nella schermata di gestione del diagramma delle classi del progetto;
 	\item selezionare la classe;
-	\item selezionare un metodo;
+	\item spostarsi sull'apposita area di modifica dati del metodo;
 	\item selezionare la visibilità del metodo.
 \end{itemize} & \textit{Non Implementato}\\ \hline
 \hypertarget{TVFO3.1.6.2}{TVFO3.1.6.2} & L'utente intende inserire il nome di un metodo di una classe.
@@ -490,7 +460,7 @@ All'utente è richiesto di:
 \begin{itemize}
 	\item trovarsi nella schermata di gestione del diagramma delle classi del progetto;
 	\item selezionare la classe;
-	\item selezionare un metodo;
+	\item spostarsi sull'apposita area di modifica dati del metodo;
 	\item inserire il nome del metodo.
 \end{itemize} & \textit{Non Implementato}\\ \hline
 \hypertarget{TVFO3.1.6.3}{TVFO3.1.6.3} & L'utente intende inserire un parametro di un metodo di una classe.
@@ -498,7 +468,7 @@ All'utente è richiesto di:
 \begin{itemize}
 	\item trovarsi nella schermata di gestione del diagramma delle classi del progetto;
 	\item selezionare la classe;
-	\item selezionare un metodo;
+	\item spostarsi sull'apposita area di modifica dati del metodo;
 	\item selezionare l'opzione di aggiunta di un parametro.
 \end{itemize} & \textit{Non Implementato}\\ \hline
 \hypertarget{TVFO3.1.6.3.1}{TVFO3.1.6.3.1} & L'utente intende inserire il nome di un parametro di un metodo di una classe.
@@ -506,8 +476,7 @@ All'utente è richiesto di:
 \begin{itemize}
 	\item trovarsi nella schermata di gestione del diagramma delle classi del progetto;
 	\item selezionare la classe;
-	\item selezionare un metodo;
-	\item selezionare un parametro del metodo;
+	\item spostarsi sull'apposita area di modifica dati del metodo;
 	\item inserire il nome del parametro.
 \end{itemize} & \textit{Non Implementato}\\ \hline
 \hypertarget{TVFO3.1.6.3.2}{TVFO3.1.6.3.2} & L'utente intende inserire il tipo di un parametro di un metodo di una classe.
@@ -515,44 +484,23 @@ All'utente è richiesto di:
 \begin{itemize}
 	\item trovarsi nella schermata di gestione del diagramma delle classi del progetto;
 	\item selezionare la classe;
-	\item selezionare un metodo;
-	\item selezionare un parametro del metodo;
+	\item spostarsi sull'apposita area di modifica dati del metodo;
 	\item inserire il tipo del parametro.
-\end{itemize} & \textit{Non Implementato}\\ \hline
-\hypertarget{TVFO3.1.6.3.3}{TVFO3.1.6.3.3} & L'utente intende confermare l'inserimento di un parametro di un metodo di una classe.
-All'utente è richiesto di:
-\begin{itemize}
-	\item trovarsi nella schermata di gestione del diagramma delle classi del progetto;
-	\item selezionare la classe;
-	\item selezionare un metodo;
-	\item inserire un nuovo parametro del metodo;
-	\item completare i campi del parametro;
-	\item selezionare l'opzione di conferma di inserimento del parametro.
 \end{itemize} & \textit{Non Implementato}\\ \hline
 \hypertarget{TVFO3.1.6.4}{TVFO3.1.6.4} & L'utente intende inserire il tipo di ritorno di un metodo di una classe.
 All'utente è richiesto di:
 \begin{itemize}
 	\item trovarsi nella schermata di gestione del diagramma delle classi del progetto;
 	\item selezionare la classe;
-	\item selezionare un metodo;
+	\item spostarsi sull'apposita area di modifica dati del metodo;
 	\item inserire il tipo di ritorno del metodo.
-\end{itemize} & \textit{Non Implementato}\\ \hline
-\hypertarget{TVFO3.1.6.5}{TVFO3.1.6.5} & L'utente intende confermare l'inserimento di un metodo di una classe. 
-All'utente è richiesto di: 
-\begin{itemize} 
-	\item trovarsi nella schermata di gestione del diagramma delle classi del progetto; 
-	\item selezionare la classe; 
-	\item inserire un nuovo metodo; 
-	\item completare i campi del metodo;
-	\item premere sull'opzione di conferma dell'inserimento.  
 \end{itemize} & \textit{Non Implementato}\\ \hline
 \hypertarget{TVFO3.1.6.6}{TVFO3.1.6.6} & L'utente intende rimuovere un parametro di un metodo di una classe.
 All'utente è richiesto di:
 \begin{itemize}
 	\item trovarsi nella schermata di gestione del diagramma delle classi del progetto;
 	\item selezionare una classe;
-	\item selezionare un metodo;
-	\item selezionare un parametro;
+	\item spostarsi sull'apposita area di modifica dati del metodo;
 	\item scegliere l'opzione di rimozione del parametro.
 \end{itemize} & \textit{Non Implementato}\\ \hline
 \hypertarget{TVFO3.1.7}{TVFO3.1.7} & L'utente intende rimuovere un metodo di una classe.
@@ -560,71 +508,63 @@ All'utente è richiesto di:
 \begin{itemize}
 	\item trovarsi nella schermata di gestione del diagramma delle classi del progetto;
 	\item selezionare la classe;
-	\item selezionare un metodo;
+	\item spostarsi sull'apposita area di modifica dati del metodo;
 	\item scegliere l'opzione di rimozione del metodo.
-\end{itemize} & \textit{Non Implementato}\\ \hline
-\hypertarget{TVFO3.1.8}{TVFO3.1.8} & L'utente intende inserire confermare l'inserimento di un attributo. 
-All'utente è richiesto di: 
-\begin{itemize} 
-	\item trovarsi nella schermata di gestione del diagramma delle classi del progetto; 
-	\item inserire una nuova classe; 
-	\item completare i campi obbligatori della classe;
-	\item premere sull'opzione di conferma dell'inserimento.
 \end{itemize} & \textit{Non Implementato}\\ \hline
 \hypertarget{TVFO3.2}{TVFO3.2} & L'utente intende inserire una relazione.
 All'utente è richiesto di:
 \begin{itemize}
 	\item trovarsi nella schermata di gestione del diagramma delle classi del progetto;
 	\item premere il pulsante di inserimento di una nuova relazione.
+	\item selezionare la classe di partenza della relazione;
+	\item selezionare la classe di destinazione della relazione.
 \end{itemize} & \textit{Non Implementato}\\ \hline
-\hypertarget{TVFO3.2.1}{TVFO3.2.1} & L'utente intende inserire il nome di una relazione.
+\hypertarget{TVFO3.2.1}{TVFO3.2.1} & L'utente intende inserire il nome di una associazione.
 All'utente è richiesto di:
 \begin{itemize}
 	\item trovarsi nella schermata di gestione del diagramma delle classi del progetto;
-	\item selezionare una relazione;
-	\item inserire il nome della relazione.
+	\item selezionare un'associazione;
+	\item inserire il nome dell'associazione.
 \end{itemize} & \textit{Non Implementato}\\ \hline
-\hypertarget{TVFO3.2.2}{TVFO3.2.2} & L'utente intende inserire la classe di partenza di una relazione.
+\hypertarget{TVFO3.2.7}{TVFO3.2.7} & L'utente intende inserire la cardinalità di un'associazione.
 All'utente è richiesto di:
 \begin{itemize}
 	\item trovarsi nella schermata di gestione del diagramma delle classi del progetto;
-	\item selezionare una relazione;
-	\item inserire la classe di partenza della relazione.
-\end{itemize} & \textit{Non Implementato}\\ \hline
-\hypertarget{TVFO3.2.3}{TVFO3.2.3} & L'utente intende inserire la classe di destinazione di una relazione.
-All'utente è richiesto di:
-\begin{itemize}
-	\item trovarsi nella schermata di gestione del diagramma delle classi del progetto;
-	\item selezionare una relazione;
-	\item inserire la classe di destinazione della relazione.
-\end{itemize} & \textit{Non Implementato}\\ \hline
-\hypertarget{TVFO3.2.5}{TVFO3.2.5} & L'utente intende inserire lo stereotipo di partenza di una relazione.
-All'utente è richiesto di:
-\begin{itemize}
-	\item trovarsi nella schermata di gestione del diagramma delle classi del progetto;
-	\item selezionare una relazione;
-	\item selezionare lo stereotipo della relazione.
-\end{itemize} & \textit{Non Implementato}\\ \hline
-\hypertarget{TVFO3.2.6}{TVFO3.2.6} & L'utente intende confermare l'inserimento di una relazione. 
-All'utente è richiesto di: 
-\begin{itemize} 
-	\item trovarsi nella schermata di gestione del diagramma delle classi del progetto;
-	\item inserire una relazione;
-	\item completare i campi della relazione;
-	\item premere sull'opzione di conferma dell'inserimento.
- \end{itemize} & \textit{Non Implementato}\\ \hline
-\hypertarget{TVFO3.2.7}{TVFO3.2.7} & L'utente intende inserire l'attributo di una relazione.
-All'utente è richiesto di:
-\begin{itemize}
-	\item trovarsi nella schermata di gestione del diagramma delle classi del progetto;
-	\item selezionare una relazione;
-	\item inserire l'attributo della relazione.
+	\item selezionare una associazione;
+	\item inserire la cardinalità dell'associazione.
 \end{itemize} & \textit{Non Implementato}\\ \hline
 \hypertarget{TVFO3.3}{TVFO3.3} & L'utente intende inserire un commento. 
 All'utente è richiesto di: 
 \begin{itemize} 
 	\item trovarsi nella schermata di gestione del diagramma delle classi del progetto;
-	\item premere il pulsante di inserimento di un nuovo commento. 
+	\item premere il pulsante di inserimento di un nuovo commento;
+	\item indicare la posizione di inserimento del commento nell'apposita area.
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
 \end{itemize} & \textit{Non Implementato}\\ \hline
 \hypertarget{TVFO3.3.1}{TVFO3.3.1} & L'utente intende inserire il testo di un commento. 
 All'utente è richiesto di: 
