--- a/Esterni/Piano_di_qualifica/Piano_di_qualifica_3_0_0.tex
+++ b/Esterni/Piano_di_qualifica/Piano_di_qualifica_3_0_0.tex
@@ -1368,6 +1368,38 @@ All'utente è richiesto di:
 	\item modificare il commento relativo al blocco else.
 \end{itemize} & \textit{Non Implementato}\\ \hline
 
+\hypertarget{TVFO4.36}{TVFO4.36} & L'utente intende ridurre la dimensione di un blocco variabile.
+All'utente è richiesto di:
+\begin{itemize}
+	\item trovarsi nella schermata di gestione del diagramma delle classi del progetto;
+	\item selezionare blocco variabile a visualizzazione espansa;
+	\item selezionare l'opzione di riduzione dimensione.
+\end{itemize} & \textit{Non Implementato}\\ \hline
+
+\hypertarget{TVFD4.37}{TVFD4.37} & L'utente intende espandere la dimensione di un blocco variabile.
+All'utente è richiesto di:
+\begin{itemize}
+	\item trovarsi nella schermata di gestione del diagramma delle classi del progetto;
+	\item selezionare blocco variabile a visualizzazione ridotta;
+	\item selezionare l'opzione di espansione dimensione.
+\end{itemize} & \textit{Non Implementato}\\ \hline
+
+\hypertarget{TVFO4.38}{TVFO4.38} & L'utente intende ridurre la dimensione di un blocco custom.
+All'utente è richiesto di:
+\begin{itemize}
+	\item trovarsi nella schermata di gestione del diagramma delle classi del progetto;
+	\item selezionare blocco variabile a visualizzazione espansa;
+	\item selezionare l'opzione di riduzione dimensione.
+\end{itemize} & \textit{Non Implementato}\\ \hline
+
+\hypertarget{TVFD4.39}{TVFD4.39} & L'utente intende espandere la dimensione di un blocco custom.
+All'utente è richiesto di:
+\begin{itemize}
+	\item trovarsi nella schermata di gestione del diagramma delle classi del progetto;
+	\item selezionare blocco variabile a visualizzazione ridotta;
+	\item selezionare l'opzione di espansione dimensione.
+\end{itemize} & \textit{Non Implementato}\\ \hline
+
 \hypertarget{TVFO5}{TVFO5} & L'utente intende salvare il progetto corrente.
 All'utente è richiesto di:
 \begin{itemize}
@@ -1385,156 +1417,6 @@ All'utente è richiesto di:
 \end{longtable}
 \clearpage
 
-\subsubsection{Tracciamento test di validazione-requisiti}
-\normalsize
-\begin{longtable}{|>{\centering}m{5cm}|m{5cm}<{\centering}|}
-\hline 
-\textbf{Test} & \textbf{Requisito}\\
-\hline
-\endhead
-\hyperlink{TVFO1}{TVFO1} & RFO1\\ \hline
-\hyperlink{TVFO2}{TVFO2} & RFO2\\ \hline
-\hyperlink{TVFO3.1}{TVFO3.1} & RFO3.1\\ \hline
-\hyperlink{TVFO3.1.1}{TVFO3.1.1} & RFO3.1.1\\ \hline
-\hyperlink{TVFO3.1.2}{TVFO3.1.2} & RFO3.1.2\\ \hline
-\hyperlink{TVFO3.1.3}{TVFO3.1.3} & RFO3.1.3\\ \hline
-\hyperlink{TVFO3.1.4}{TVFO3.1.4} & RFO3.1.4\\ \hline
-\hyperlink{TVFO3.1.4.1}{TVFO3.1.4.1} & RFO3.1.4.1\\ \hline
-\hyperlink{TVFO3.1.4.2}{TVFO3.1.4.2} & RFO3.1.4.2\\ \hline
-\hyperlink{TVFO3.1.4.3}{TVFO3.1.4.3} & RFO3.1.4.3\\ \hline
-\hyperlink{TVFO3.1.4.4}{TVFO3.1.4.4} & RFO3.1.4.4\\ \hline
-\hyperlink{TVFO3.1.4.5}{TVFO3.1.4.5} & RFO3.1.4.5\\ \hline
-\hyperlink{TVFO3.1.4.6}{TVFO3.1.4.6} & RFO3.1.4.6\\ \hline
-\hyperlink{TVFO3.1.5}{TVFO3.1.5} & RFO3.1.5\\ \hline
-\hyperlink{TVFO3.1.6}{TVFO3.1.6} & RFO3.1.6\\ \hline
-\hyperlink{TVFO3.1.6.1}{TVFO3.1.6.1} & RFO3.1.6.1\\ \hline
-\hyperlink{TVFO3.1.6.2}{TVFO3.1.6.2} & RFO3.1.6.2\\ \hline
-\hyperlink{TVFO3.1.6.3}{TVFO3.1.6.3} & RFO3.1.6.3\\ \hline
-\hyperlink{TVFO3.1.6.3.1}{TVFO3.1.6.3.1} & RFO3.1.6.3.1\\ \hline
-\hyperlink{TVFO3.1.6.3.2}{TVFO3.1.6.3.2} & RFO3.1.6.3.2\\ \hline
-\hyperlink{TVFO3.1.6.3.3}{TVFO3.1.6.3.3} & RFO3.1.6.3.3\\ \hline
-\hyperlink{TVFO3.1.6.4}{TVFO3.1.6.4} & RFO3.1.6.4\\ \hline
-\hyperlink{TVFO3.1.6.5}{TVFO3.1.6.5} & RFO3.1.6.5\\ \hline
-\hyperlink{TVFO3.1.6.6}{TVFO3.1.6.6} & RFO3.1.6.6\\ \hline
-\hyperlink{TVFO3.1.7}{TVFO3.1.7} & RFO3.1.7\\ \hline
-\hyperlink{TVFO3.1.8}{TVFO3.1.8} & RFO3.1.8\\ \hline
-\hyperlink{TVFO3.2}{TVFO3.2} & RFO3.2\\ \hline
-\hyperlink{TVFO3.2.1}{TVFO3.2.1} & RFO3.2.1\\ \hline
-\hyperlink{TVFO3.2.2}{TVFO3.2.2} & RFO3.2.2\\ \hline
-\hyperlink{TVFO3.2.3}{TVFO3.2.3} & RFO3.2.3\\ \hline
-\hyperlink{TVFO3.2.5}{TVFO3.2.5} & RFO3.2.5\\ \hline
-\hyperlink{TVFO3.2.6}{TVFO3.2.6} & RFO3.2.6\\ \hline
-\hyperlink{TVFO3.2.7}{TVFO3.2.7} & RFO3.2.7\\ \hline
-\hyperlink{TVFO3.3}{TVFO3.3} & RFO3.3\\ \hline
-\hyperlink{TVFO3.3.1}{TVFO3.3.1} & RFO3.3.1\\ \hline
-\hyperlink{TVFO3.3.2}{TVFO3.3.2} & RFO3.3.2\\ \hline
-\hyperlink{TVFO3.3.3}{TVFO3.3.3} & RFO3.3.3\\ \hline
-\hyperlink{TVFO3.4}{TVFO3.4} & RFO3.4\\ \hline
-\hyperlink{TVFO3.5}{TVFO3.5} & RFO3.5\\ \hline
-\hyperlink{TVFO3.6}{TVFO3.6} & RFO3.6\\ \hline
-\hyperlink{TVFD3.7}{TVFD3.7} & RFD3.7\\ \hline
-\hyperlink{TVFD3.8}{TVFD3.8} & RFD3.8\\ \hline
-\hyperlink{TVFD3.9}{TVFD3.9} & RFD3.9\\ \hline
-\hyperlink{TVFD3.10}{TVFD3.10} & RFD3.10\\ \hline
-\hyperlink{TVFO3.11.1}{TVFO3.11.1} & RFO3.11.1\\ \hline
-\hyperlink{TVFO3.11.2}{TVFO3.11.2} & RFO3.11.2\\ \hline
-\hyperlink{TVFO3.11.3.1}{TVFO3.11.3.1} & RFO3.11.3.1\\ \hline
-\hyperlink{TVFO3.11.3.2}{TVFO3.11.3.2} & RFO3.11.3.2\\ \hline
-\hyperlink{TVFO3.11.3.3}{TVFO3.11.3.3} & RFO3.11.3.3\\ \hline
-\hyperlink{TVFO3.11.3.5}{TVFO3.11.3.5} & RFO3.11.3.5\\ \hline
-\hyperlink{TVFO3.11.3.6}{TVFO3.11.3.6} & RFO3.11.3.6\\ \hline
-\hyperlink{TVFO3.11.4.1}{TVFO3.11.4.1} & RFO3.11.4.1\\ \hline
-\hyperlink{TVFO3.11.4.2}{TVFO3.11.4.2} & RFO3.11.4.2\\ \hline
-\hyperlink{TVFO3.11.4.3.1}{TVFO3.11.4.3.1} & RFO3.11.4.3.1\\ \hline
-\hyperlink{TVFO3.11.4.3.2}{TVFO3.11.4.3.2} & RFO3.11.4.3.2\\ \hline
-\hyperlink{TVFO3.11.4.3.3}{TVFO3.11.4.3.3} & RFO3.11.4.3.3\\ \hline
-\hyperlink{TVFO3.11.4.4}{TVFO3.11.4.4} & RFO3.11.4.4\\ \hline
-\hyperlink{TVFO3.11.4.5}{TVFO3.11.4.5} & RFO3.11.4.5\\ \hline
-\hyperlink{TVFO3.11.5}{TVFO3.11.5} & RFO3.11.5\\ \hline
-\hyperlink{TVFO3.12.1}{TVFO3.12.1} & RFO3.12.1\\ \hline
-\hyperlink{TVFO3.12.2}{TVFO3.12.2} & RFO3.12.2\\ \hline
-\hyperlink{TVFO3.12.3}{TVFO3.12.3} & RFO3.12.3\\ \hline
-\hyperlink{TVFO3.12.4}{TVFO3.12.4} & RFO3.12.4\\ \hline
-\hyperlink{TVFO3.12.5}{TVFO3.12.5} & RFO3.12.5\\ \hline
-\hyperlink{TVFO3.12.6}{TVFO3.12.6} & RFO3.12.6\\ \hline
-\hyperlink{TVFO3.13.1}{TVFO3.13.1} & RFO3.13.1\\ \hline
-\hyperlink{TVFO3.13.2}{TVFO3.13.2} & RFO3.13.2\\ \hline
-\hyperlink{TVFO3.13.3}{TVFO3.13.3} & RFO3.13.3\\ \hline
-\hyperlink{TVFO4}{TVFO4} & RFO4\\ \hline
-\hyperlink{TVFO4.1}{TVFO4.1} & RFO4.1\\ \hline
-\hyperlink{TVFO4.1.1}{TVFO4.1.1} & RFO4.1.1\\ \hline
-\hyperlink{TVFO4.1.2}{TVFO4.1.2} & RFO4.1.2\\ \hline
-\hyperlink{TVFO4.1.3}{TVFO4.1.3} & RFO4.1.3\\ \hline
-\hyperlink{TVFO4.1.4}{TVFO4.1.4} & RFO4.1.4\\ \hline
-\hyperlink{TVFO4.2}{TVFO4.2} & RFO4.2\\ \hline
-\hyperlink{TVFO4.2.1}{TVFO4.2.1} & RFO4.2.1\\ \hline
-\hyperlink{TVFO4.2.2}{TVFO4.2.2} & RFO4.2.2\\ \hline
-\hyperlink{TVFO4.2.3}{TVFO4.2.3} & RFO4.2.3\\ \hline
-\hyperlink{TVFO4.3}{TVFO4.3} & RFO4.3\\ \hline
-\hyperlink{TVFO4.3.1}{TVFO4.3.1} & RFO4.3.1\\ \hline
-\hyperlink{TVFO4.3.2}{TVFO4.3.2} & RFO4.3.2\\ \hline
-\hyperlink{TVFO4.3.3}{TVFO4.3.3} & RFO4.3.3\\ \hline
-\hyperlink{TVFO4.3.4}{TVFO4.3.4} & RFO4.3.4\\ \hline
-\hyperlink{TVFO4.3.5}{TVFO4.3.5} & RFO4.3.5\\ \hline
-\hyperlink{TVFO4.4}{TVFO4.4} & RFO4.4\\ \hline
-\hyperlink{TVFO4.4.1}{TVFO4.4.1} & RFO4.4.1\\ \hline
-\hyperlink{TVFO4.4.2}{TVFO4.4.2} & RFO4.4.2\\ \hline
-\hyperlink{TVFO4.4.3}{TVFO4.4.3} & RFO4.4.3\\ \hline
-\hyperlink{TVFO4.4.4}{TVFO4.4.4} & RFO4.4.4\\ \hline
-\hyperlink{TVFO4.5}{TVFO4.5} & RFO4.5\\ \hline
-\hyperlink{TVFO4.5.1}{TVFO4.5.1} & RFO4.5.1\\ \hline
-\hyperlink{TVFO4.5.2}{TVFO4.5.2} & RFO4.5.2\\ \hline
-\hyperlink{TVFO4.5.3}{TVFO4.5.3} & RFO4.5.3\\ \hline
-\hyperlink{TVFO4.5.4}{TVFO4.5.4} & RFO4.5.4\\ \hline
-\hyperlink{TVFO4.5.5}{TVFO4.5.5} & RFO4.5.5\\ \hline
-\hyperlink{TVFO4.5.6}{TVFO4.5.6} & RFO4.5.6\\ \hline
-\hyperlink{TVFO4.6}{TVFO4.6} & RFO4.6\\ \hline
-\hyperlink{TVFO4.6.1}{TVFO4.6.1} & RFO4.6.1\\ \hline
-\hyperlink{TVFO4.6.2}{TVFO4.6.2} & RFO4.6.2\\ \hline
-\hyperlink{TVFO4.6.3}{TVFO4.6.3} & RFO4.6.3\\ \hline
-\hyperlink{TVFO4.7}{TVFO4.7} & RFO4.7\\ \hline
-\hyperlink{TVFO4.8}{TVFO4.8} & RFO4.8\\ \hline
-\hyperlink{TVFO4.9}{TVFO4.9} & RFO4.9\\ \hline
-\hyperlink{TVFO4.10}{TVFO4.10} & RFO4.10\\ \hline
-\hyperlink{TVFO4.11}{TVFO4.11} & RFO4.11\\ \hline
-\hyperlink{TVFO4.12}{TVFO4.12} & RFO4.12\\ \hline
-\hyperlink{TVFO4.13}{TVFO4.13} & RFO4.13\\ \hline
-\hyperlink{TVFD4.14}{TVFD4.14} & RFD4.14\\ \hline
-\hyperlink{TVFD4.15}{TVFD4.15} & RFD4.15\\ \hline
-\hyperlink{TVFD4.16}{TVFD4.16} & RFD4.16\\ \hline
-\hyperlink{TVFD4.17}{TVFD4.17} & RFD4.17\\ \hline
-\hyperlink{TVFD4.18}{TVFD4.18} & RFD4.18\\ \hline
-\hyperlink{TVFD4.19}{TVFD4.19} & RFD4.19\\ \hline
-\hyperlink{TVFO4.20.1}{TVFO4.20.1} & RFO4.20.1\\ \hline
-\hyperlink{TVFO4.20.2}{TVFO4.20.2} & RFO4.20.2\\ \hline
-\hyperlink{TVFO4.20.3}{TVFO4.20.3} & RFO4.20.3\\ \hline
-\hyperlink{TVFO4.20.4}{TVFO4.20.4} & RFO4.20.4\\ \hline
-\hyperlink{TVFO4.21.1}{TVFO4.21.1} & RFO4.21.1\\ \hline
-\hyperlink{TVFO4.21.2}{TVFO4.21.2} & RFO4.21.2\\ \hline
-\hyperlink{TVFO4.21.3}{TVFO4.21.3} & RFO4.21.3\\ \hline
-\hyperlink{TVFO4.22.1}{TVFO4.22.1} & RFO4.22.1\\ \hline
-\hyperlink{TVFO4.22.2}{TVFO4.22.2} & RFO4.22.2\\ \hline
-\hyperlink{TVFO4.22.3}{TVFO4.22.3} & RFO4.22.3\\ \hline
-\hyperlink{TVFO4.23.1}{TVFO4.23.1} & RFO4.23.1\\ \hline
-\hyperlink{TVFO4.23.2}{TVFO4.23.2} & RFO4.23.2\\ \hline
-\hyperlink{TVFO4.23.3}{TVFO4.23.3} & RFO4.23.3\\ \hline
-\hyperlink{TVFO4.24.1}{TVFO4.24.1} & RFO4.24.1\\ \hline
-\hyperlink{TVFO4.24.2}{TVFO4.24.2} & RFO4.24.2\\ \hline
-\hyperlink{TVFO4.24.3}{TVFO4.24.3} & RFO4.24.3\\ \hline
-\hyperlink{TVFO4.24.4}{TVFO4.24.4} & RFO4.24.4\\ \hline
-\hyperlink{TVFO4.24.5}{TVFO4.24.5} & RFO4.24.5\\ \hline
-\hyperlink{TVFO4.25.1}{TVFO4.25.1} & RFO4.25.1\\ \hline
-\hyperlink{TVFO4.25.2}{TVFO4.25.2} & RFO4.25.2\\ \hline
-\hyperlink{TVFO4.25.3}{TVFO4.25.3} & RFO4.25.3\\ \hline
-\hyperlink{TVFO4.26}{TVFO4.26} & RFO4.26\\ \hline
-\hyperlink{TVFO5}{TVFO5} & RFO5\\ \hline
-\hyperlink{TVFO6}{TVFO6} & RFO6\\ \hline
-\caption[Tracciamento test di validazione-requisiti]{Tracciamento test di validazione-requisiti}
-\label{tab:tv-requi}
-\end{longtable}
-\clearpage
-
-
 
 \subsection{Test di sistema}
 I test di sistema vengono eseguiti sul prodotto una volta che tutte le sue componenti sono completamente integrate. Questi test hanno lo scopo di verificare che il prodotto soddisfi i requisiti, come definiti nel documento \AdR.
@@ -1550,17 +1432,12 @@ I test di sistema vengono eseguiti sul prodotto una volta che tutte le sue compo
 \hypertarget{TSFO1.1}{TSFO1.1} & Verificare che il sistema visualizzi un messaggio d'errore se l'attore cerca di caricare come progetto un file incompatibile con l'editor stesso. & \textit{Non Implementato}\\ \hline
 \hypertarget{TSFO2}{TSFO2} & Verificare che il sistema permetta all'utente di creare un nuovo progetto. & \textit{Non Implementato}\\ \hline
 \hypertarget{TSFO3.1}{TSFO3.1} & Verificare che il sistema permetta all'utente di inserire una classe nel diagramma delle classi. & \textit{Non Implementato}\\ \hline
-\hypertarget{TSFO3.1.1}{TSFO3.1.1} & Verificare che il sistema permetta all'utente di inserire la visibilità di una classe del diagramma delle classi. & \textit{Non Implementato}\\ \hline
 \hypertarget{TSFO3.1.2}{TSFO3.1.2} & Verificare che il sistema permetta all'utente di inserire il nome di una classe & \textit{Non Implementato}\\ \hline
-\hypertarget{TSFO3.1.3}{TSFO3.1.3} & Verificare che il sistema permetta all'utente di scegliere lo stereotipo per la classe & \textit{Non Implementato}\\ \hline
 \hypertarget{TSFO3.1.4}{TSFO3.1.4} & Verificare che il sistema permetta all'utente di inserire un attributo per la classe. & \textit{Non Implementato}\\ \hline
 \hypertarget{TSFO3.1.4.1}{TSFO3.1.4.1} & Verificare che il sistema permetta all'utente di scegliere la visibilità per l'attributo & \textit{Non Implementato}\\ \hline
 \hypertarget{TSFO3.1.4.2}{TSFO3.1.4.2} & Verificare che il sistema permetta all'utente di inserire il nome dell'attributo & \textit{Non Implementato}\\ \hline
-\hypertarget{TSFO3.1.4.3}{TSFO3.1.4.3} & Verificare che il sistema permetta all'utente di inseire il tipo dell'attributo & \textit{Non Implementato}\\ \hline
-\hypertarget{TSFO3.1.4.4}{TSFO3.1.4.4} & Verificare che il sistema permetta all'utente di scegliere la molteplicità dell'attributo & \textit{Non Implementato}\\ \hline
+\hypertarget{TSFO3.1.4.3}{TSFO3.1.4.3} & Verificare che il sistema permetta all'utente di inserire il tipo dell'attributo & \textit{Non Implementato}\\ \hline
 \hypertarget{TSFO3.1.4.5}{TSFO3.1.4.5} & Verificare che il sistema permetta all'utente di inserire il valore di default dell'attributo & \textit{Non Implementato}\\ \hline
-\hypertarget{TSFO3.1.4.6}{TSFO3.1.4.6} & Verificare che il sistema permetta all'utente di confermare l'inserimento dell'attributo & \textit{Non Implementato}\\ \hline
-\hypertarget{TSFO3.1.4.6.1}{TSFO3.1.4.6.1} & Verificare che il sistema visualizzi un messaggio d'errore se l'utente non ha inserito le informazioni corrette per l'attributo & \textit{Non Implementato}\\ \hline
 \hypertarget{TSFO3.1.5}{TSFO3.1.5} & Verificare che il sistema permetta all'utente di rimuovere un attributo precedentemente inserito & \textit{Non Implementato}\\ \hline
 \hypertarget{TSFO3.1.6}{TSFO3.1.6} & Verificare che il sistema permetta all'utente di inserire un metodo per una classe & \textit{Non Implementato}\\ \hline
 \hypertarget{TSFO3.1.6.1}{TSFO3.1.6.1} & Verificare che il sistema permetta all'utente di scegliere la visibilità per un metodo & \textit{Non Implementato}\\ \hline
@@ -1568,37 +1445,24 @@ I test di sistema vengono eseguiti sul prodotto una volta che tutte le sue compo
 \hypertarget{TSFO3.1.6.3}{TSFO3.1.6.3} & Verificare che il sistema permetta all'utente di inserire un parametro per un metodo & \textit{Non Implementato}\\ \hline
 \hypertarget{TSFO3.1.6.3.1}{TSFO3.1.6.3.1} & Verificare che il sistema permetta all'utente di inserire il nome di un parametro del metodo & \textit{Non Implementato}\\ \hline
 \hypertarget{TSFO3.1.6.3.2}{TSFO3.1.6.3.2} & Verificare che il sistema permetta all'utente di inserire il tipo del parametro di un metodo & \textit{Non Implementato}\\ \hline
-\hypertarget{TSFO3.1.6.3.3}{TSFO3.1.6.3.3} & Verificare che il sistema permetta all'utente di confermare l'inserimento di un parametro di un metodo & \textit{Non Implementato}\\ \hline
-\hypertarget{TSFO3.1.6.3.3.1}{TSFO3.1.6.3.3.1} & Verificare che il sistema visualizzi un messaggio d'errore se l'utente non ha inserito le informazioni corrette per il parametro & \textit{Non Implementato}\\ \hline
+\hypertarget{TSFO3.1.6.3.3}{TSFO3.1.6.3.3} & Verificare che il sistema permetta all'utente di inserire il valore di default di un parametro di un metodo & \textit{Non Implementato}\\ \hline
 \hypertarget{TSFO3.1.6.4}{TSFO3.1.6.4} & Verificare che il sistema permetta all'utente di inserire il tipo di ritorno di un metodo & \textit{Non Implementato}\\ \hline
-\hypertarget{TSFO3.1.6.5}{TSFO3.1.6.5} & Verificare che il sistema permetta all'utente di confermare l'inserimento di un metodo & \textit{Non Implementato}\\ \hline
-\hypertarget{TSFO3.1.6.5.1}{TSFO3.1.6.5.1} & Verificare che il sistema visualizzi un messaggio d'errore se l'utente non ha inserito le infomazioni corrette per il metodo & \textit{Non Implementato}\\ \hline
 \hypertarget{TSFO3.1.6.6}{TSFO3.1.6.6} & Verificare che il sistema permetta all'utente di rimuovere un parametro di un metodo precedentemente inseirito & \textit{Non Implementato}\\ \hline
 \hypertarget{TSFO3.1.7}{TSFO3.1.7} & Verificare che il sistema permetta all'utente di rimuovere un metodo precedentemente inserito & \textit{Non Implementato}\\ \hline
-\hypertarget{TSFO3.1.8}{TSFO3.1.8} & Verificare che il sistema permetta all'utente di confermare l'inserimento della classe & \textit{Non Implementato}\\ \hline
-\hypertarget{TSFO3.1.8.1}{TSFO3.1.8.1} & Verificare che il sistema visualizzi un messaggio d'errore se l'utente non ha inserito le corrette informazioni per la classe & \textit{Non Implementato}\\ \hline
-\hypertarget{TSFO3.2}{TSFO3.2} & Verificare che il sistema permetta all'utente di inserire una relazioni & \textit{Non Implementato}\\ \hline
-\hypertarget{TSFO3.2.1}{TSFO3.2.1} & Verificare che il sistema permetta all'utente di scegliere il nome di una relazione & \textit{Non Implementato}\\ \hline
+\hypertarget{TSFO3.2}{TSFO3.2} & Verificare che il sistema permetta all'utente di inserire una relazione & \textit{Non Implementato}\\ \hline
+\hypertarget{TSFO3.2.1}{TSFO3.2.1} & Verificare che il sistema permetta all'utente di scegliere il nome di un'associazione & \textit{Non Implementato}\\ \hline
 \hypertarget{TSFO3.2.2}{TSFO3.2.2} & Verificare che il sistema permetta all'utente di inserire la classe di partenza della relazione & \textit{Non Implementato}\\ \hline
 \hypertarget{TSFO3.2.3}{TSFO3.2.3} & Verificare che il sistema permetta all'utente di scegliere la classe di destinazione della relazione & \textit{Non Implementato}\\ \hline
-\hypertarget{TSFO3.2.4}{TSFO3.2.4} & Verificare che il sistema permetta all'utente di scegliere la cardinalità della relazione & \textit{Non Implementato}\\ \hline
-\hypertarget{TSFO3.2.5}{TSFO3.2.5} & Verificare che il sistema permetta all'utente di scegliere uno stereotipo per la relazione & \textit{Non Implementato}\\ \hline
-\hypertarget{TSFO3.2.6}{TSFO3.2.6} & Verificare che il sistema permetta all'utente di confermare l'inserimento di una relazione & \textit{Non Implementato}\\ \hline
-\hypertarget{TSFO3.2.6.1}{TSFO3.2.6.1} & Verificare che il sistema visualizzi un messaggio d'errore se l'utente non ha inserito le informazioni corrette per la relazione & \textit{Non Implementato}\\ \hline
-\hypertarget{TSFO3.2.7}{TSFO3.2.7} & Verificare che il sistema permetta all'utente di scegliere l'attributo di una relazione & \textit{Non Implementato}\\ \hline
+\hypertarget{TSFO3.2.4}{TSFO3.2.4} & Verificare che il sistema permetta all'utente di scegliere la cardinalità di un'associazione & \textit{Non Implementato}\\ \hline
 \hypertarget{TSFO3.3}{TSFO3.3} & Verificare che il sistema permetta all'utente di inserire un commento & \textit{Non Implementato}\\ \hline
 \hypertarget{TSFO3.3.1}{TSFO3.3.1} & Verificare che il sistema permetta all'utente di inserire il testo di un commento & \textit{Non Implementato}\\ \hline
-\hypertarget{TSFO3.3.2}{TSFO3.3.2} & Verificare che il sistema permetta all'utente di scegliere il "parent" di un commento & \textit{Non Implementato}\\ \hline
-\hypertarget{TSFO3.3.3}{TSFO3.3.3} & Verificare che il sistema permetta all'utente di confermare l'inserimento del commento & \textit{Non Implementato}\\ \hline
-\hypertarget{TSFO3.3.3.1}{TSFO3.3.3.1} & Verificare che il sistema visualizzi un messaggio d'errore se l'utente non ha inserito le informazioni corrette per il commento & \textit{Non Implementato}\\ \hline
+
 \hypertarget{TSFO3.4}{TSFO3.4} & Verificare che il sistema permetta all'utente di rimuovere una classe & \textit{Non Implementato}\\ \hline
 \hypertarget{TSFO3.5}{TSFO3.5} & Verificare che il sistema permetta all'utente di rimuovere una relazione & \textit{Non Implementato}\\ \hline
 \hypertarget{TSFO3.6}{TSFO3.6} & Verificare che il sistema permetta all'utente di rimuovere un commento & \textit{Non Implementato}\\ \hline
-\hypertarget{TSFD3.7}{TSFD3.7} & Verificare che il sistema permetta all'utente di ridurre una classe & \textit{Non Implementato}\\ \hline
-\hypertarget{TSFD3.8}{TSFD3.8} & Verificare che il sistema permetta all'utente di espandere una classe & \textit{Non Implementato}\\ \hline
-\hypertarget{TSFD3.9}{TSFD3.9} & Verificare che il sistema permetta all'utente di ridurre un commento & \textit{Non Implementato}\\ \hline
-\hypertarget{TSFD3.10}{TSFD3.10} & Verificare che il sistema permetta all'utente di espandere un commento & \textit{Non Implementato}\\ \hline
-\hypertarget{TSFO3.11.1}{TSFO3.11.1} & Verificare che il sistema permetta all'utente di modificare la visibilità di una classe & \textit{Non Implementato}\\ \hline
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \hypertarget{TSFO3.11.2}{TSFO3.11.2} & Verificare che il sistema permetta all'utente di modificare il nome di una classe & \textit{Non Implementato}\\ \hline
 \hypertarget{TSFO3.11.3.1}{TSFO3.11.3.1} & Verificare che il sistema permetta all'utente di modificare la visibilità di un attributo & \textit{Non Implementato}\\ \hline
 \hypertarget{TSFO3.11.3.2}{TSFO3.11.3.2} & Verificare che il sistema permetta all'utente di modificare il nome di un attributo & \textit{Non Implementato}\\ \hline
