--- a/util/hx-macro.sty
+++ b/util/hx-macro.sty
@@ -10,9 +10,9 @@
 \newcommand{\email}{\href{mailto:hivex.team@gmail.com}{hivex.team@gmail.com}}
 
 \newcommand{\scopo}{%
-Lo scopo del prodotto è quello di implementare un \gloss{editor} \gloss{UML} che consenta, a partire dai diagrammi realizzati dall'utente, di generare il codice dell'applicazione da esso descritta, appartenente ad uno specifico dominio applicativo: i giochi da tavolo.
+Scopo del prodotto è quello di implementare un \gloss{editor} \gloss{UML} che consenta, a partire dai diagrammi realizzati dall'utente, di generare il codice dell'applicazione da egli progettata.
 
-Il sistema offrirà le seguenti funzionalità:
+Il sistema offre le seguenti funzionalità:
 \begin{itemize}
 	\item fornire all'utente la possibilità di realizzare l'architettura di classi e il codice dei metodi dell'applicativo desiderato tramite due tipologie di diagrammi ispirate ai diagrammi UML delle classi e delle attività, ma opportunamente modificate per guidare la progettazione e la stesura del codice garantendone completezza, coesione e una buona qualità di strutturazione;
 	\item generare un applicativo eseguibile scritto in codice \gloss{Java} a partire dai diagrammi realizzati dall'utente, a patto che essi siano completi e corretti;
