--- a/Esterni/Manuale_utente/Manuale_utente_1_0_0.tex
+++ b/Esterni/Manuale_utente/Manuale_utente_1_0_0.tex
@@ -16,6 +16,9 @@
 \include{diario}
 \tableofcontents
 
+% per neutralizzare il nostro comando per il glossario:
+\renewcommand{\gloss}[1]{#1}
+
 
 
 
@@ -33,7 +36,7 @@ Questo manuale spiega le funzionalità e le modalità d'utilizzo dell'applicazio
 \scopo
 
 \subsection{Pubblico}
-Il manuale è rivolto agli utenti del prodotto. Assumeremo che l'utente di \proj{} possegga delle conoscenze almeno basilari nel campo della programmazione a oggetti e della progettazione di software a oggetti; per ogni evenienza, alleghiamo in appendice \ref{app:gloss} un \textbf{glossario di termini utili} riguardo alla programmazione a oggetti e alle specifiche funzionalità offerte da \proj.
+Questo manuale è rivolto agli utenti del prodotto. Assumeremo che l'utente di \proj{} possegga delle conoscenze almeno basilari nel campo della programmazione a oggetti e della progettazione di software a oggetti; per ogni evenienza, alleghiamo in appendice \ref{app:gloss} un \textbf{glossario di termini utili} riguardanti sia la programmazione a oggetti sia alcune specifiche funzionalità offerte da \proj.
 
 
 
@@ -63,20 +66,33 @@ Sul browser dev'essere attivato JavaScript.
 %%  Utilizzo
 %%%%%%%%%%%%
 
-\section{Utilizzo} \label{sec:utilizzo} % GUI, Java, JSON, API REST, (test effettuati?), screenshot, ...
+\section{Utilizzo} \label{sec:utilizzo}
 
-Di seguito descriviamo come utilizzare \proj{} per progettare e generare un'applicazione eseguibile. La sezione \ref{sec:gui} introduce brevemente l'\textbf{interfaccia grafica}; le sezioni \ref{sec:new}, \ref{sec:save} e \ref{sec:load} descrivono come creare, salvare e caricare l'insieme di diagrammi che rappresentano il \textbf{progetto di un'applicazione}; infine, la sezione \ref{sec:gen} spiega come generare un \textbf{programma eseguibile} a partire dai diagrammi di un progetto.
+Di seguito descriviamo come utilizzare \proj{} per progettare e generare un'applicazione eseguibile. La sezione \ref{sec:gui} introduce brevemente l'\textbf{interfaccia grafica} e scorre a volo d'uccello le funzionalità di \proj; le sezioni \ref{sec:new}, \ref{sec:save} e \ref{sec:load} descrivono come creare, salvare e caricare l'insieme di diagrammi che rappresentano il \textbf{progetto} di un'applicazione; infine, la sezione \ref{sec:gen} spiega come generare un \textbf{programma eseguibile} a partire dai diagrammi di un progetto.
 
 
 
 \subsection{Interfaccia grafica} \label{sec:gui}
 
-Vi viene subito presentato un diagramma delle classi vuoto, come in figura \ref{fig:screen} sul quale potete iniziare un nuovo progetto. Ai lati e in alto sono presenti delle barre con dei menù, mentre al centro vi è l'area di lavoro.
+Vi viene subito presentato un diagramma delle classi vuoto (come in figura \ref{fig:screen}) sul quale potete iniziare un nuovo progetto. Ai lati e in alto sono presenti delle barre con dei menù, mentre al centro vi è l'area di lavoro. Nell specifico:
+\begin{itemize}
+	\item A sinistra avete il \textbf{menù di creazione}, da cui potete aggiungere elementi ai vari diagrammi; a seconda del tipo di diagramma su cui starete lavorando, il menù di creazione vi permetterà di aggiungere componenti (per il diagramma delle classi) o blocchi (per il diagramma di attività). Oltre ad aggiungere elementi, questo menù vi può anche servire per visualizzare una rappresentazione ad albero del vostro progetto (funzionalità secondaria descritta in §\ref{sec:extra}).
+	\item A destra è posizionato il \textbf{menù di dettaglio}; questo fornisce informazioni su una particolare cella all'interno di un diagramma. Per avere informazioni su una cella, dovrete selezionarla con il mouse.
+	\item Il menù posizionato in cima alla pagina è il \textbf{menù dei comandi}, il quale presenta i seguenti pulsanti cliccabili:
+	\begin{itemize}
+		\item \click{Create}, per creare un nuovo progetto;
+		\item \click{Open}, per caricare e aprire un progetto precedentemente salvato;
+		\item \click{Generate}, per generare il codice sorgente e l'eseguibile a partire dai diagrammi;
+		\item \click{Save}, per salvare lo stato attuale di un progetto in un file JSON (che potrà essere utilizzato per caricare nuovamente il progetto su \proj{} con il pulsante \click{Open});
+		\item \click{Documentation}, per visualizzare la documentazione del codice sorgente di \proj, che è un progetto \emph{open source}.
+	\end{itemize}
+	\item Infine, al centro vi è l'\textbf{area di lavoro}: in essa visualizzerete, di volta in volta, il diagramma delle classi e i vari diagrammi di attività del vostro progetto. Per muoversi nell'area di lavoro, bisogna trascinare l'area stessa con il mouse.
+\end{itemize}
 
 % screenshot index.html
-\begin{figure}
+\begin{figure}[h]
 \centering
-	\includegraphics[scale=0.46]{img/screen_index_2}
+	\includegraphics[scale=0.46]{img/index}
 	\caption{Interfaccia grafica.}
 	\label{fig:screen}
 \end{figure}
@@ -89,61 +105,71 @@ Vi viene subito presentato un diagramma delle classi vuoto, come in figura \ref{
 Un diagramma delle classi vuoto rappresenta un nuovo progetto; se vi trovate già davanti a un diagramma vuoto potete iniziare subito a progettare una nuova applicazione, saltando questa sezione e continuando alla sezione \ref{par:arch}. Invece, nel caso abbiate un diagramma delle classi non vuoto ma vogliate creare un nuovo progetto da zero, cliccate sull'icona del menù in alto a sinistra; dal menù a comparsa, cliccate su \click{New Project}; vi ritroverete con un diagramma delle classi vuoto, corrispondente ad un nuovo progetto.
 
 \subsubsection{Progettare l'architettura dell'applicazione} \label{par:arch}
-Progettare un'applicazione ad oggetti vuol dire innanzitutto specificarne l'architettura. Per fare ciò, dovete popolare il diagramma delle classi che si trova in centro alla pagina.
+Progettare un'applicazione ad oggetti vuol dire innanzitutto specificarne l'architettura. Per fare ciò, dovete popolare il diagramma (nell'area di lavoro) con delle componenti, che possono essere classi o interfacce.
 
-\paragraph{Creazione di una componente} \label{par:creaz_class} Potete creare una nuova componente cliccando su un'icona del \textbf{menù di creazione} (visibile a sinistra); ci sono tre icone che rappresentano tre tipi di componente dell'architettura:
+\paragraph{Creazione di una componente} \label{par:creaz_class} Potete creare una nuova componente cliccando su un'icona del menù di creazione (visibile a sinistra) e cliccando nel punto dell'area di lavoro in cui volete che si materializzi la componente; ci sono tre icone che rappresentano tre tipi di componente dell'architettura:
 \begin{itemize}
-	\item \click{Class};
-	\item \click{Abstract Class};
-	\item \click{Interface}.
+	\item \click{Class} (1, in figura \ref{fig:creation});
+	\item \click{Abstract Class} (2, in figura \ref{fig:creation});
+	\item \click{Interface} (3, in figura \ref{fig:creation}).
 \end{itemize}
-Oltre a queste, altre icone permettono la creazione di commenti (l'icona \click{Annotation}) e di relazioni tra componenti (\click{Generalization}, \click{Implementation} e \click{Association}, che verranno introdotte tra poco).
+Oltre a queste, altre icone permettono la creazione di commenti (l'icona \click{Comment}; 4, in figura \ref{fig:creation}) e di relazioni tra componenti (\click{Generalization}, \click{Implementation} e \click{Association}, che verranno introdotte tra poco; risp. 5, 6 e 7 in figura \ref{fig:creation}).
 
-\paragraph{Specifica dell'interfaccia di una componente} \label{par:inter} Ogni componente è rappresentata nel diagramma da un rettangolo con tre aree, come da standard UML:
+% screenshot menù di creazione
+\begin{figure}[h]
+\centering
+	\includegraphics[scale=0.4]{img/creation}
+	\caption{Il menù di creazione.}
+	\label{fig:creation}
+\end{figure}
+
+\paragraph{Specifica dell'interfaccia di una componente} \label{par:inter} Ogni componente è rappresentata nel diagramma da un rettangolo con due o tre aree, come da standard UML:
 \begin{enumerate}
-	\item un'area con il nome della componente;
-	\item un'area contenente i campi dati;
-	\item un'area contenente i metodi.
+	\item l'area superiore reca il nome della componente;
+	\item l'area a metà contiene i campi dati (non presente nelle interfacce);
+	\item l'area inferiore contiene i metodi.
 \end{enumerate}
-Cliccando le aree dei campi dati o dei metodi, queste si espandono per mostrare il proprio contenuto. Inizialmente esse sono vuote. Per inserire un campo dati, fate doppio-click sulla classe; dopodiché:
+
+Inizialmente le aree contenente campi dati e metodi sono vuote. Per inserire un campo dati in una classe, cliccate sulla classe; dopodiché:
 \begin{enumerate}
-	\item il \textbf{menù di dettaglio} (a destra) si riempirà con i dettagli della classe cliccata;
+	\item il menù di dettaglio (a destra) si riempirà con i dettagli della classe cliccata;
 	\item cliccate su \click{Attributes} per far comparire l'elenco dei campi dati (attributi);
 	\item vi verrà presentato l'elenco dei campi dati;
-	\item scorrete in basso e cliccate su \click{Add Attribute};
-	\item compilate la form per i dettagli relativi al nuovo campo dati.
+	\item scorrete in basso e cliccate su \click{Add attribute};
+	\item compilate la form per creare il nuovo campo dati.
 \end{enumerate}
-Per inserire un metodo, fate doppio-click sulla classe; dopodiché:
+
+Per aggiungere un metodo ad una componente del progetto, cliccate sulla classe o sull'interfaccia; dopodiché:
 \begin{enumerate}
 	\item il menù di dettaglio (a destra) si riempirà con i dettagli della classe cliccata;
 	\item cliccate su \click{Methods} per far comparire l'elenco dei metodi;
 	\item vi verrà presentato l'elenco dei metodi;
-	\item scorrete in basso e cliccate su \click{Add Method};
-	\item compilate la form per i dettagli relativi al nuovo metodo.
+	\item scorrete in basso e cliccate su \click{Add method};
+	\item compilate la form per specificare la segnatura del nuovo metodo.
 \end{enumerate}
-Per modificare il comportamento di un metodo, si veda §\ref{sec:activity}.
+Dopo aver specificato la segnatura di un metodo, bisognerà stabilirne anche il comportamento; per modificare il comportamento di un metodo, si veda §\ref{sec:activity}.
 
-\paragraph{Definizione di una relazione tra due componenti} È possibile definire una relazione tra due componenti del diagramma delle classi. Per fare questo, cercate il tipo di relazione desiderato nel menù di creazione (a sinistra) e cliccate sopra all'icona appropriata: apparirà nel diagramma una nuova freccia. Potete trascinare ognuna delle sue punte su una componente, stabilendo così una nuova relazione. Vi sono tre tipi di relazione:
+\paragraph{Definizione di una relazione tra due componenti} È possibile definire una relazione tra due componenti del diagramma delle classi. Per fare questo, cercate il tipo di relazione desiderato nel menù di creazione (a sinistra) e cliccate sopra all'icona appropriata; cliccate ora una componente $A$ e poi una componente $B$: questo farà comparire una freccia da $A$ a $B$. Potete, inoltre, trascinare ognuna delle due punte su una nuova componente, cambiando così i membri della relazione. Vi sono tre tipi di relazione:
 \begin{itemize}
 	\item \click{Generalization}, per estendere l'interfaccia di una classe;
 	\item \click{Implementation}, per implementare un'interfaccia pura;
-	\item \click{Association}. % ??
+	\item \click{Association}, per suggerire che una componente dipende da un'altra. % TODO
 \end{itemize}
 
-\paragraph{Modificare campi dati e metodi} Per modificare un campo dati o un metodo di una classe, fate doppio-click sulla classe; dopodiché:
+\paragraph{Modificare campi dati e metodi} Per modificare un campo dati o un metodo di una componente, cliccate su di essa; dopodiché:
 \begin{enumerate}
-	\item il menù di dettaglio (a destra) si riempirà con i dettagli della classe cliccata;
+	\item il menù di dettaglio (a destra) si riempirà con i dettagli della componente;
 	\item cliccate su \click{Attributes} (per far comparire l'elenco dei campi dati) o su \click{Methods} (per far comparire l'elenco dei metodi);
 	\item vi verrà presentato l'elenco dei campi dati o dei metodi, a seconda di ciò che avete cliccato;
 	\item cercate il campo dati o metodo che volete modificare;
-	\item modificate la form contenente dettagli del campo dati o metodo.
+	\item modificate la form contenente i dettagli del campo dati o metodo.
 \end{enumerate}
 
 
 \subsubsection{Definire il comportamento delle componenti} \label{sec:activity}
-Mentre la segnatura dei metodi di una classe definisce l'interfaccia della classe, l'implementazione dei metodi definisce il \textbf{comportamento} della classe. Quando avete chiaro quale dev'essere il comportamento di una vostra classe cercate la classe nel diagramma delle classi e fate doppio-click su di essa; dopodiché:
+Mentre la segnatura dei metodi di una componente definisce l'interfaccia di questa, l'implementazione dei metodi definisce il \textbf{comportamento} della componente. Quando avete chiaro quale dev'essere il comportamento di una vostra componente, cercate la componente nel diagramma delle classi e cliccate su di essa; dopodiché:
 \begin{enumerate}
-	\item il menù di dettaglio (a destra) si riempirà con i dettagli della classe cliccata;
+	\item il menù di dettaglio (a destra) si riempirà con i dettagli della componente;
 	\item cliccate su \click{Methods} per far comparire l'elenco dei metodi;
 	\item compilate la form con la segnatura del metodo;
 	\item in basso, cliccate su \click{Go to Activity Diagram}.
@@ -163,16 +189,16 @@ Cliccando su uno dei blocchi nella barra di creazione, esso verrà inserito nell
 
 \paragraph{Spostamento di blocchi} Ovviamente potete spostare ogni blocco creato e posizionarlo dove volete nella sequenza di passi. Inoltre, potete decidere di inserire un blocco (di qualsiasi tipo) all'interno di un \click{For}, di un \click{While} o di un \click{If}: questi tre tipi di blocchi possono contenerne altri. Per rimarcare che un blocco sta all'interno di un altro, esso viene “indentato”, cioè spostato leggermente a destra rispetto al blocco che lo contiene.
 
-\paragraph{Rimozione di blocchi} Per rimuovere un blocco da un diagramma di attività, selezionate il blocco (cliccandovi sopra) e premete il tasto \click{canc}.
+\paragraph{Rimozione di blocchi} Per rimuovere un blocco da un diagramma di attività, passate sul blocco con il mouse: comparirà una “X” rossa che potrete cliccare per rimuovere il blocco.
 
 \subsubsection{Modificare l'architettura}
 Una volta modificata l'implementazione di un metodo, per modificare l'architettura dell'intera applicazione dovete tornare al diagramma delle classi. Per fare ciò, cliccate sul pulsante in basso a destra \click{Back to Class Diagram}. Il diagramma di attività modificato verrà salvato e al suo posto vi verrà presentato il diagramma delle classi.
 
-Dal diagramma delle classi, potete modificare l'architettura dell'applicazione in vari modi: potete spostare o rimuovere ogni relazione tra componenti dell'applicazione e potete aggiungere o rimuovere componenti. Per aggiungere una componente, tornate alla sezione \ref{par:creaz_class}; per rimuoverla, cliccatevi sopra e premete il tasto \click{canc}.
+Dal diagramma delle classi, potete modificare l'architettura dell'applicazione in vari modi: potete spostare o rimuovere ogni relazione tra componenti dell'applicazione e potete aggiungere o rimuovere componenti. Per aggiungere una componente, tornate alla sezione \ref{par:creaz_class}; per rimuoverla, passateci sopra con il mouse: comparirà una “X” rossa che potrete cliccare per rimuovere la componente.
 
 
 
-\subsection{Salvare il progetto} \label{sec:save} % aggiungere formato non .json ma speciale tipo .hx ?
+\subsection{Salvare il progetto} \label{sec:save}
 
 Ad ogni momento, è possibile salvare i diagrammi disegnati nel proprio computer. Per salvare un progetto (cioè un insieme di diagrammi), cliccate sull'icona del menù (in alto a sinistra) e selezionate \click{Save} dalle voci del menù. Verrà avviato download di un singolo file: questo file rappresenta il vostro progetto e contiene tutte le informazioni sui diagrammi che avete disegnato.
 
@@ -188,40 +214,32 @@ Se volete lavorare ad un progetto che avete precedentemente salvato, cliccate su
 
 Quando, infine, i diagrammi che avete disegnato vi sembreranno sufficienti, potrete generare da essi un programma eseguibile. Per fare questo, cliccate sull'icona del menù (in alto a sinistra) e selezionate \click{Generate} dalle voci del menù. Il vostro browser invierà una richiesta di generazione al nostro server. La risposta del server può essere positiva (vi viene inviato il codice eseguibile) o negativa. Quest'ultimo caso si può verificare per vari motivi; il più probabile è che non abbiate progettato bene la vostra applicazione. Se è così, pensate a modificare i vostri diagrammi e riprovate. Si veda §\ref{sec:mal_gen} per gestire bene una risposta negativa del server.
 
-\subsection{Funzionalità accessorie}
-Di seguito vi vengono indicate le funzionalità secondarie di \proj, e come sia possibile utilizzarle.
+\subsection{Funzionalità accessorie} \label{sec:extra}
+Di seguito presentiamo le funzionalità secondarie di \proj{} e come sia possibile utilizzarle.
 
-\subsubsection{Pan & Zoom (ingrandimento e riduzione)}
+\subsubsection{\emph{Pan \& Zoom} (ingrandimento e riduzione)}
 È possibile ingrandire e rimpicciolire l'area di lavoro. Per farlo, è sufficiente muovere la rotellina del mouse in alto o in basso. È possibile anche muovere l'area di lavoro premendo in una zona vuota, muovendo e rilasciando il mouse. 
 
-È possibile in alternativa usare i pulsanti presenti in alto a destra \textit{+}, \textit{-}, \textif{RESET} al fine di ingrandire, ridurre e resettare il livello di zoom rispettivamente.
-
-\subsubsection{Eliminazione di un elemento grafico}
-Qualora dobbiate rimuovere un elemento disegnato sarà sufficiente passare sopra il puntatore e premere la \textit{X} rossa comparsa in alto a sinistra.
+In alternativa alla rotella del mouse, potete usare i pulsanti presenti in alto a destra, \click{+}, \click{-} e \click{RESET}, rispettivamente al fine di ingrandire, ridurre e reimpostare il livello di zoom.
 
 \subsubsection{Visualizzazione estesa e compatta}
-Al fine di aumentare l'area di disegno disponibile è possibile passare ad una visualizzazione compatta. Per fare questo è sufficiente premere sul menù in alto a destra in corrispondenza dei tre punti verticali e selezionare \textit{Compact}.
+Al fine di aumentare l'area di disegno disponibile, le barre laterali occupano il minor spazio possibile (“visualizzazione compatta”). Esiste, tuttavia, la possibilità di avere le barre laterali più spaziose (“visualizzazione estesa”); per fare questo è sufficiente premere sul menù in alto a destra in corrispondenza dei tre punti verticali e selezionare \click{Extended}. Per tornare alla visualizzazione compatta, basta tornare al menù in alto a destra e premere \click{Compact}.
 
-L'interfaccia disporrà dei seguenti pulsanti compatti, con le funzionalità identiche a quelle della visualizzazione estesa.
+\subsubsection{\emph{Treeview}}
+All'interno del diagramma delle attività è possibile far comparire, sulla sinistra, un albero (detto \textbf{\emph{Treeview}}) contenente tutte le classi e i loro attributi.
 
-\subsubsection{Treeview}
-All'interno del diagramma delle attività è possibile visualizzare sulla sinistra un albero contenente tutte le classi e i loro attributi in una visualizzazione ad albero, chiamata \textbf{Treeview}.
-
-I simboli da cui sono preceduti i nomi indicano ciò che rappresentano i vari elementi. Di seguito si riporta l'associazione tra elemento e simbolo grafico.
-
+I simboli da cui i nomi sono preceduti indicano ciò che i vari elementi rappresentano. Questa è l'associazione tra elemento e simbolo grafico:
 \begin{itemize}
-\item [classe] tre elementi di colore differente;
-\item [metodo] rombo viola;
-\item [interfaccia] chiave blu;
-\item [attributo] pallino blu;
+	\item \textbf{classe}: tre elementi di colore differente;
+	\item \textbf{metodo}: rombo viola;
+	\item \textbf{interfaccia}: chiave blu;
+	\item \textbf{attributo}: tondo blu.
 \end{itemize}
 
-La stessa simbologia è sfruttata per la funzione di autocompletamento, riportata di seguito.
+Sfruttiamo la medesima simbologia per la funzione di autocompletamento (vedi §\ref{sec:autocomplete}).
 
-\subsubsection{Autocompletamento}
-È possibile sfruttare la funzionalità di autocompletamento mentre si riempie il contenuto di un blocco del diagramma delle attività.
-
-Per procedere, è sufficiente cominciare a scrivere la variabile desiderata e automaticamente \proj{} fornirà i suggerimenti più appropriati per il testo inserito.
+\subsubsection{Autocompletamento} \label{sec:autocomplete}
+Mentre riempite il contenuto di un blocco del diagramma di attività, potete sfruttare la funzionalità di autocompletamento. Per usarla, è sufficiente cominciare a scrivere la variabile desiderata: automaticamente, \proj{} vi fornirà i suggerimenti più appropriati per completare il testo inserito.
 
 
 
@@ -263,7 +281,7 @@ Nel caso non riusciate ad accedere al nostro server, potete recarvi all'indirizz
 
 \subsection{Problemi con l'utilizzo di \proj}
 
-È possibile che \proj{} contenga dei piccoli bug, oppure sia desiderabile una modifica del suo funzionamento. Potete segnalare qualsiasi malfunzionamento o richiesta di funzionalità all'indirizzo \url{https://github.com/hivex-unipd/swedesigner/issues}, sotto forma di \emph{GitHub Issue}.
+È possibile che \proj{} contenga dei piccoli bug, oppure che sia desiderabile una modifica del suo funzionamento. Potete segnalare qualsiasi malfunzionamento o richiesta di funzionalità all'indirizzo \url{https://github.com/hivex-unipd/swedesigner/issues}, sotto forma di \emph{GitHub Issue}.
 
 
 
@@ -278,7 +296,8 @@ Nel caso non riusciate ad accedere al nostro server, potete recarvi all'indirizz
 \section{Glossario dei termini utili} \label{app:gloss}
 
 \begin{description}
-	\item[applicazione web] Applicazione\marginpar{\textbf{A}} accessibile via browser.
+	\item[algoritmo] Sequenza\marginpar{\textbf{A}} di passi per raggiungere un obiettivo.
+	\item[applicazione web] Applicazione accessibile via browser.
 	\item[attributo] In programmazione a oggetti, variabile che deve appartenere ad ogni istanza di una classe.
 	\item[assegnazione] In programmazione, istruzione che imposta una variabile a un determinato valore.
 	\item[blocco] In\marginpar{\textbf{B}} un diagramma di attività \proj, rettangolo corrispondente al passo di una procedura, cioè a un'istruzione; un blocco \click{For}, \click{While} o \click{If} può contenere altri blocchi.
